--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "type": "module",
   "bin": {
-	    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js"
   },
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/JomaVysokiy/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/JomaVysokiy/frontend-project-44/actions)",
@@ -11,5 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
