changed .eslintrc.yml, Makefile bin/brain-games.js  bin/src/cli.js package-lock.json package.json . Created bin/brain-even.js bin/src/index.js

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,12 +5,13 @@ extends: eslint:recommended
 overrides: []
 parserOptions:
   ecmaVersion: latest
-  sourceType: module
-rules: {
-  no-console: 0
+  sourceType: moduler
+
+rules: 
+import/extensions: "off"
+  no-console: "off"
+  no-var: "error"
   import/extensions: 
     - error
     - js: always
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
-  make lint:npx eslint
-}
+
