--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@hexlet/code",
   "type": "module",
-  "bin": {
-    "brain-games": "bin/brain-games.js"
+  "bin": {  
+    "brain-games": "bin/brain-games.js",
+    "brain-games": "bin/brain-even.js"
   },
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/JomaVysokiy/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/JomaVysokiy/frontend-project-44/actions)",
