--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@hexlet/code",
   "type": "module",
   "bin": {  
+    "brain-calc": "bin/brain-calc.js",
     "brain-games": "bin/brain-games.js",
-    "brain-games": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js"
   },
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/JomaVysokiy/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/JomaVysokiy/frontend-project-44/actions)",
