--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@hexlet/code",
   "type": "module",
-  "bin": {  
+  "bin": {
+    "brain-prime": "bin/brain-prime.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-gcd": "bin/brain-gcd.js",
     "brain-calc": "bin/brain-calc.js",
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js"
