--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,7 +1,12 @@
 env:
   browser: true
   es2021: true
-extends: eslint:recommended
+extends: [
+  "eslint:recommended",
+  "plugin:react-hooks/recommended",
+  "plugin:import/recommended"
+],
+
 overrides: []
 parserOptions:
   ecmaVersion: latest
