--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "license": "ISC",
   "dependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "eslint": "^8.40.0"
+    "eslint": "^8.48.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
