--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "brain-even": "bin/brain-even.js"
   },
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/JomaVysokiy/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/JomaVysokiy/frontend-project-44/actions)",
-  "main": "index.js",
+  "description": "brain-games - a game that will allow us to test our mathematical abilities in mini-games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,10 +24,7 @@
     "eslint": "^8.48.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.0.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react-hooks": "^4.6.0"
-  }
+    "eslint-plugin-import": "^2.28.1"
+     }
 }
 
